@@ -1,3 +1,10 @@
+TRUNK
+* 'cruise add' command:
+  ** -u|--url option is deprecated in favor of -r|--repository - in some cases what goes there is not a URL
+  ** can be invoked as ./cruise add [project name] [repository name]
+  ** -s | -source-control option added to specify the source control type
+  ** infers source control type from repository location if it starts with svn:, svn+ssh: or git:
+
 * 1.3.0
   - cruise data (build results, etc) is stored in $HOME/.cruise/ by default
   - builds can now be serialized - with a config option set, CC.rb will only run one build at a time
